--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ DB_HOST=localhost
 DB_PORT=3306
 DB_NAME=bookhub
 DB_USER=root
-DB_PASSWORD=
+DB_PASSWORD=root
 SESSION_SECRET=WilfKdsCIhGY5ZgZxiJ0ZV20mGDHdaCI
