--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "debug": "~2.6.9",
     "dotenv": "^16.5.0",
     "ejs": "~2.6.1",
-    "express": "^4.21.2",
+    "express": "^4.18.2",
     "express-session": "^1.18.1",
     "http-errors": "~1.6.3",
     "jest": "^30.0.3",
     "morgan": "~1.9.1",
-    "mysql2": "^3.14.1"
+    "mysql2": "^3.14.1",
+    "path-to-regexp": "^1.7.0"
   },
   "devDependencies": {
     "mocha": "^11.7.1",
